Update in chapters for calibration

--- a/include/Calibration.tex
+++ b/include/Calibration.tex
@@ -230,8 +230,8 @@ uniform even though some dispersion remains.
 \end{figure}
 
 \section{Calibration} \label{sec:calibration}
-\subsection{Energy and time
-  calibration} \label{sec:TOT_TOA_calibration}
+
+\subsection{Energy calibration} \label{sec:TOT_TOA_calibration}
 \begin{equation}
   \text{TOT} = a \, E + b - \frac{c}{E - t} \; ,
   \label{eq:TOTsurrogateFunction}
@@ -278,7 +278,7 @@ uniform even though some dispersion remains.
 \end{figure}
 
 
-
+\subsection{Time calibration} \label{sec:TOT_TOA_calibration}
 \subsection{Threshold calibration} \label{sec:threshold}
 
 
@@ -395,7 +395,7 @@ electrons, again in agreement with~\cite{art:tmpx} (the error is
 obtained by error propagation of \cref{eq:THLDAC}).
 
 
-\subsection{Threshold calibration with test pulses}
+\subsubsection{Threshold calibration with test pulses}
 
 The Timepix readout chips provide an internal test pulse generator
 which can be used for calibration as well as equalisation of the
