[Calibration] Few lines on the calibration and the energy calibration

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -285,3 +285,32 @@ keywords = "Global least-squares fit "
       reportNumber   = "LBL-28165-REV, LBL-28165",
       SLACcitation   = "%%CITATION = NUIMA,B58,6;%%"
 }
+
+@article{Jakubek2008155,
+title = "Pixel detectors for imaging with heavy charged particles ",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
+volume = "591",
+number = "1",
+pages = "155 - 158",
+year = "2008",
+note = "Radiation Imaging Detectors 2007Proceedings of the 9th International Workshop on Radiation Imaging Detectors ",
+issn = "0168-9002",
+doi = "http://dx.doi.org/10.1016/j.nima.2008.03.091",
+url = "http://www.sciencedirect.com/science/article/pii/S0168900208004245",
+author = "Jan Jakubek and Andrea Cejnarova and Tomas Holy and Stanislav Pospisil and Josef Uher and Zdenek Vykydal",
+keywords = "Pixel detector",
+keywords = "Radiography",
+keywords = "Spectroscopy "
+}
+
+@article{AlipourTehrani:2054922,
+      author        = "Alipour Tehrani, Niloufar and Arfaoui, Samir and Benoit,
+                       Mathieu and Celeste, Damiano and Dannheim, Dominik and
+                       Pfleger, Florentina and Redford, Sophie",
+      title         = "{Calibration of ultra-thin hybrid pixel detector
+                       assemblies with Timepix readout ASICs}",
+      month         = "Sep",
+      year          = "2015",
+      reportNumber  = "CLICdp-Note-2015-003",
+      url           = "http://cds.cern.ch/record/2054922",
+}
