--- a/include/Calibration.tex
+++ b/include/Calibration.tex
@@ -288,8 +288,7 @@ curvature in the function. An asymptote occurs at $E=t$. The point at
 which the fit crosses the x-axis (TOT=0) corresponds to the threshold:
 below the threshold no charge can be detected. The boundary between
 the low energy (non-linear response) and high energy (linear response)
-is defined by the I\textsubscript{krum} parameter. (TO BE CONTINUED
-DEVELOPED with ikrum thing).
+is defined by the I\textsubscript{krum} parameter.
 
 \begin{figure}[htbp] \centering
   \begin{subfigure}[b]{0.45\textwidth}
