[Calibration] few more updates on the calibration

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -118,7 +118,8 @@
   include/ActiveEdgeSensors,
   include/Conclusions,
   include/appendix_ActiveEdgeSensors,
-  refs,
+  include/appendix_Calibration,  
+refs,
 }
 
 %------------------------------------------------------------------------------
@@ -243,6 +244,7 @@
 \part*{Appendix}
 % Add your appendices here - don't forget to also add them to \includeonly above
 \include{include/appendix_ActiveEdgeSensors}
+\include{include/appendix_Calibration}
 \printbibliography[heading=subbibliography]
 
 %------------------------------------------------------------------------------
