--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -314,3 +314,18 @@ keywords = "Spectroscopy "
       reportNumber  = "CLICdp-Note-2015-003",
       url           = "http://cds.cern.ch/record/2054922",
 }
+
+@article{KRUMMENACHER1991527,
+title = "Pixel detectors with local intelligence: an IC designer point of view",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment",
+volume = "305",
+number = "3",
+pages = "527 - 532",
+year = "1991",
+note = "",
+issn = "0168-9002",
+doi = "http://dx.doi.org/10.1016/0168-9002(91)90152-G",
+url = "http://www.sciencedirect.com/science/article/pii/016890029190152G",
+author = "F. Krummenacher",
+
+}
